<resources>
    <string name="app_name">Playlist Party</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_create">Create Room</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_room">Room Key:</string>
    <string name="title_activity_host_room">Room Key:</string>
    <string name="playlist_party">Playlist Party</string>
    <string name="create_room">Create Room</string>
    <string name="join_room">Join Room</string>
    <string name="room_key">Room Key</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="create_playlist">Name Playlist</string>
    <string name="add_button">Add Music</string>
    <string name="play_button">Play Playlist</string>
    <string name="playlist_name_display">Playlist Name:</string>
</resources>
