<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorSpotifyBlack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity">

    <TextView
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlist_party"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="28sp"
            android:layout_marginTop="8dp"
            android:id="@+id/textView2"/>
    <Button
            android:theme="@style/AppTheme"
            android:textColor="@color/colorWhite"
            android:text="@string/create_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_button"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <Button
            android:theme="@style/AppTheme"
            android:textColor="@color/colorWhite"
            android:text="@string/join_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/join_button"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/create_button"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:textColor="@color/colorWhite"
            android:text="Adam Lyn, Shane Peacock, Jacob Rodriguez, Daniel Sypioe, Ian Vickers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/project_members"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:textSize="12sp" android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>